--- a/cats.html
+++ b/cats.html
@@ -77,7 +77,7 @@
                     <div class="article-container">
                         <table>
                             <caption>
-                                List of Dogs
+                                List of Cats
                             </caption>
                             <tr>
                                 <th>Name</th>
